--- a/src/htdocs/modules/summary/0-0-1/css/_ShakeMapStationLayer.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_ShakeMapStationLayer.scss
@@ -87,7 +87,7 @@
 }
 
 .station-layer-icon {
-	position:relative;
+	position:absolute;
 
 	&:before {
 		display:block;
@@ -97,7 +97,7 @@
 		border-right-width: 6px;
 		position: absolute;
 		top:-10px;
-		left:-6px;
+		left:1px;
 		z-index: 2;
 	}
 
@@ -110,7 +110,7 @@
 		border-bottom-color: #666;
 		position: absolute;
 		top: -13px;
-		left: -8px;
+		left: -1px;
 		z-index: 1;
 	}
 }
