--- a/src/htdocs/modules/summary/0-0-1/css/_InteractiveMap.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_InteractiveMap.scss
@@ -11,20 +11,14 @@
 	background-color:rgba(0, 0, 0, 0.75);
 
 	> .summary-interactive-map-close {
-		display:block;
-		position:absolute;
-		bottom:12px;
-		right:12px;
-		left:12px;
-		line-height:1em;
-		text-align:center;
-		color:#000;
-		background-color:#fff;
-		cursor:pointer;
-		z-index:9999;
-		padding:8px 0;
-		box-shadow:0 1px 5px rgba(0,0,0,0.65);
-		border-radius:4px;
+		display: block;
+		position: relative;
+		padding: 8px 12px;
+		width: 95%;
+		max-width: 300px;
+		margin: 0 auto;
+		z-index: 9999;
+		bottom:3.5em;
 	}
 
 	.city-distance {
