--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -21,30 +21,6 @@
 	}
 }
 
-.scientific-hypocenter {
-
-	> .tablist-top > nav > section {
-		max-width:none;
-		line-height:1;
-	}
-
-	> .downloads {
-		margin:2em 0;
-	}
-}
-
-.networkmagnitude-mag {
-	display:block;
-}
-
-.networkmagnitude-type .networkmagnitude-mag {
-	position:absolute;
-	bottom:0;
-	left:0;
-	width:100%;
-	font-size:.8em;
-}
-
 .networkmagnitude-summary {
 	.magnitude {
 		color:#000000 !important;
@@ -53,8 +29,25 @@
 	}
 }
 
-.networkmagnitude > .accordion-content {
-	padding:0;
+.networkmagnitude-summary > li {
+
+	&.magnitude {
+		color:#000;
+		padding:5px;
+		border-radius:2px;
+		text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);
+		box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
+		padding:0.5em 0;
+
+		> abbr {
+			color:#666;
+		}
+	}
+}
+
+/* add space between accordion sections, magnitudes tab */
+.networkmagnitude {
+  margin: 1em 0 0;
 }
 
 @media screen and (max-width:559px) {
