Reformat uncertainty values in hypocenter detail table.

--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -15,8 +15,9 @@
 
 		> .uncertainty {
 			color:#666;
-			float:right;
-			white-space:nowrap;
+			display:block;
+			font-weight:normal;
+			font-size:smaller;
 		}
 	}
 }
