--- a/src/htdocs/css/_responsiveTableScientific.scss
+++ b/src/htdocs/css/_responsiveTableScientific.scss
@@ -10,17 +10,24 @@
 		display: block;
 		margin:0;
 		color:#444;
-		font-weight:normal;
+		font-weight:bold;
+		font-size:2rem;
 
-		> em {
-			padding-right:0.5em;
-			font-weight:bold;
-			font-style:normal;
+		> small {
+			padding-left:0.5em;
+			font-weight:normal;
+			font-size:1.6rem;
 		}
 	}
 
 	abbr {
 		border-bottom:1px dotted #999;
+	}
+}
+
+.networkmagnitude {
+	> h3 {
+		font-size:1.6rem;
 	}
 }
 
