--- a/src/htdocs/terms.scss
+++ b/src/htdocs/terms.scss
@@ -1,33 +1,33 @@
-.magnitudes th {
-  background-color:#ccc;
-  font-weight:bold;
-}
+// .magnitudes th {
+//   background-color:#ccc;
+//   font-weight:bold;
+// }
 
-.magnitudes td, th {
-  border:1px solid #fff;
-  padding:5px;
-}
+// .magnitudes td, th {
+//   border:1px solid #fff;
+//   padding:5px;
+// }
 
-.magnitudes .type{
-  width:15%;
-}
+// .magnitudes .type{
+//   width:15%;
+// }
 
-.magnitudes .mrange{
-  width:20%;
-}
+// .magnitudes .mrange{
+//   width:20%;
+// }
 
-.magnitudes .drange{
-  width:15%;
-}
+// .magnitudes .drange{
+//   width:15%;
+// }
 
-.magnitudes .comments{
-  width:55%;
-}
+// .magnitudes .comments{
+//   width:55%;
+// }
 
-.odd {
-  background-color:#fafafa;
-}
+// .odd {
+//   background-color:#fafafa;
+// }
 
-.even {
-  background-color:#f0f0f0;
-}
+// .even {
+//   background-color:#f0f0f0;
+// }
