Switch text content to be wrapped in divs (in case it contains paragraphs)

--- a/src/htdocs/modules/summary/0-0-1/css/_SummaryPage.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_SummaryPage.scss
@@ -20,3 +20,9 @@
 		display: block;
 	}
 }
+
+.summary-general-header > div,
+.summary-general-text > div,
+.summary-impact-text > div {
+	margin-top: 1em;
+}
