Move attribution styles out of module css

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -43,3 +43,10 @@ canvas {
 .tablist-panel img {
   margin: 1em 0 0;
 }
+
+.attribution {
+  color: #666;
+  font-size: .75em;
+  display:block;
+  font-weight:normal;
+}
