Update impact bubbles so that Yellow pager text fits inside

--- a/src/htdocs/css/_event-header.scss
+++ b/src/htdocs/css/_event-header.scss
@@ -9,7 +9,7 @@
 			float:left;
 			background-color: #fff;
 			margin: 1em 0 0;
-			padding: 6px;
+			padding: 6px 0;
 			text-align: center;
 			text-decoration: none;
 			line-height:1;
@@ -26,7 +26,7 @@
 			}
 
 			> strong {
-				font-size:.8em;
+				font-size:.8125em;
 			}
 
 			> abbr {
