Updated compass includepaths, scss imports, add browserify

--- a/src/htdocs/modules/impact/_DYFIPage.scss
+++ b/src/htdocs/modules/impact/_DYFIPage.scss
@@ -1,5 +1,5 @@
-@import '../../../../node_modules/hazdev-webutils/src/mvc/ModalView';
-@import '../../../../node_modules/hazdev-webutils/src/mvc/DownloadView';
+@import 'mvc/ModalView';
+@import 'mvc/DownloadView';
 
 .dyfi-responses {
 
