--- a/src/htdocs/modules/impact/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/_DYFIFormPage.scss
@@ -1,6 +1,6 @@
-@import '../../../../node_modules/hazdev-location-view/src/LocationView';
-@import '../../../../node_modules/hazdev-question-view/src/QuestionView';
-@import '../../../../node_modules/hazdev-webutils/src/mvc/ModalView';
+@import 'locationview/LocationView';
+@import 'questionview/QuestionView';
+@import 'mvc/ModalView';
 
 .dyfiIframe {
   border: 1px solid #ddd;
