--- a/src/htdocs/modules/scientific/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/_HypocenterPage.scss
@@ -1,5 +1,5 @@
-@import '../../../../node_modules/hazdev-webutils/src/mvc/ModalView';
-@import '../../../../node_modules/hazdev-webutils/src/mvc/DownloadView';
+@import 'mvc/ModalView';
+@import 'mvc/DownloadView';
 
 .origin-summary > ul > li {
   width:25%;
