Update path to leaflet css

--- a/src/htdocs/modules/impact.scss
+++ b/src/htdocs/modules/impact.scss
@@ -1,4 +1,4 @@
-@import "../../leaflet/dist/leaflet.css";
+@import "../lib/leaflet/leaflet.css";
 @import 'impact/DYFIPage';
 @import 'impact/DYFIFormPage';
 @import 'impact/ShakeMapPage';
