--- a/src/htdocs/modules/summary.scss
+++ b/src/htdocs/modules/summary.scss
@@ -1,4 +1,4 @@
-@import '../../leaflet/dist/leaflet.css';
+@import '../lib/leaflet/leaflet.css';
 @import 'summary/InteractiveMap';
 @import 'summary/SummaryPage';
 @import 'summary/TectonicSummary';
