Move module css into module folder as index.scss

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -19,7 +19,7 @@
 // Page-Wide Styles
 // --------------------------------------------------
 
-@import 'base.scss';
+@import 'modules/base/index.scss';
 
 .clearfix:after {
   display:block;
