Updated path to leaflet css

--- a/src/htdocs/modules/impact/index.scss
+++ b/src/htdocs/modules/impact/index.scss
@@ -1,4 +1,4 @@
-@import "../lib/leaflet/leaflet.css";
+@import '../../lib/leaflet/leaflet.css';
 @import 'DYFIPage';
 @import 'DYFIFormPage';
 @import 'ShakeMapPage';
