--- a/src/htdocs/modules/summary/index.scss
+++ b/src/htdocs/modules/summary/index.scss
@@ -1,4 +1,4 @@
-@import '../lib/leaflet/leaflet.css';
+@import '../../lib/leaflet/leaflet.css';
 @import 'InteractiveMap';
 @import 'SummaryPage';
 @import 'TectonicSummary';
