Update DYFIFormPage imports for location view

--- a/src/htdocs/modules/impact/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/_DYFIFormPage.scss
@@ -1,6 +1,7 @@
 @import 'locationview/CoordinateControl';
 @import 'locationview/GeocodeControl';
 @import 'locationview/GeolocationControl';
+@import 'locationview/LeafletControls';
 @import 'locationview/LocationControl';
 @import 'locationview/LocationView';
 @import 'locationview/PointControl';
