Added MousePostion import

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -4,6 +4,7 @@
 @import 'event-footer';
 @import 'downloads';
 @import 'MouseOverLayer';
+@import 'MousePosition';
 
 @import 'tablist/TabList.scss';
 @import 'accordion/Accordion.scss';
