sets up styles for dyfi circles

--- a/src/htdocs/modules/summary/_ShakeMapStationLayer.scss
+++ b/src/htdocs/modules/summary/_ShakeMapStationLayer.scss
@@ -122,3 +122,22 @@
 .station-mmiX:before {border-bottom-color:$mmiX;}
 .station-mmiXI:before {border-bottom-color:$mmiXI;}
 .station-mmiXII:before {border-bottom-color:$mmiXII;}
+
+.dyfi-layer-icon {
+  position:absolute;
+  border-radius: 50%;
+  border: 1px solid #666;
+}
+
+.dyfi-station-mmiI {background-color:$mmiI;}
+.dyfi-station-mmiII {background-color:$mmiII;}
+.dyfi-station-mmiIII {background-color:$mmiIII;}
+.dyfi-station-mmiIV {background-color:$mmiIV;}
+.dyfi-station-mmiV {background-color:$mmiV;}
+.dyfi-station-mmiVI {background-color:$mmiVI;}
+.dyfi-station-mmiVII {background-color:$mmiVII;}
+.dyfi-station-mmiVIII {background-color:$mmiVIII;}
+.dyfi-station-mmiIX {background-color:$mmiIX;}
+.dyfi-station-mmiX {background-color:$mmiX;}
+.dyfi-station-mmiXI {background-color:$mmiXI;}
+.dyfi-station-mmiXII {background-color:$mmiXII;}
