--- a/src/htdocs/modules/scientific/index.scss
+++ b/src/htdocs/modules/scientific/index.scss
@@ -1,6 +1,8 @@
 /* This file should import partials for the scientific module/modulepages. */
 
+@import "ScientificSummaryPage";
 @import "HypocenterPage";
 @import "MomentTensorPage";
 @import "FocalMechanismPage";
 @import "IrisProductsPage";
+@import "FiniteFaultPage";
