Implement DYFIUTMLayer, integrate into Interactive Map

--- a/src/htdocs/modules/summary/_InteractiveMap.scss
+++ b/src/htdocs/modules/summary/_InteractiveMap.scss
@@ -1,3 +1,4 @@
+@import '_DYFIUTMLayer';
 @import '_ShakeMapStationLayer';
 @import 'htdocs/css/_MouseOverLayer';
 @import 'htdocs/css/_MousePosition';
