Convert PagerPage to extend SummaryDetailsPage. Add getSummaryMarkup to build summary markup for pager products.

--- a/src/htdocs/modules/impact/_PagerPage.scss
+++ b/src/htdocs/modules/impact/_PagerPage.scss
@@ -1,3 +1,13 @@
+
+.pager-summary > ul > li {
+  width:25%;
+
+  &.image > img {
+    display: block;
+    margin: auto;
+  }
+}
+
 .pager {
 
   .disclaimer {
@@ -46,4 +56,13 @@
       display:table-row;
     }
   }
+}
+
+
+@media screen and (min-width: 560px) {
+
+  .pager-summary > ul > li {
+    width:20%;
+  }
+
 }
