--- a/src/htdocs/modules/impact/_ShakeMapPage.scss
+++ b/src/htdocs/modules/impact/_ShakeMapPage.scss
@@ -43,6 +43,43 @@ dl.station-metadata > dd {
   margin-top: 1em;
 }
 
+@media screen and (min-width:560px) {
+
+  .shakemap-summary > ul > li {
+    width:20%;
+  }
+
+  .station dl.horizontal {
+
+    > dt {
+      width: 6em;
+      margin: 0;
+    }
+
+    > dd {
+      margin-left:7em;
+    }
+  }
+
+  table.station-components {
+    > tbody > tr {
+      background: #fafafa;
+
+      > th {
+        font-weight:normal;
+        background:none;
+      }
+      > .acc,
+      > .vel,
+      > .psa03,
+      > .psa10,
+      > .psa30 {
+        text-align:right;
+      }
+    }
+  }
+}
+
 .station-channels-pga,
 .station-channels-pgv,
 .station-channels-psa03,
