Scope css rules. Update image styles so that svg image maps are not broken

--- a/src/htdocs/modules/impact/_DYFIPage.scss
+++ b/src/htdocs/modules/impact/_DYFIPage.scss
@@ -1,6 +1,10 @@
 @import 'mvc/ModalView';
 @import 'mvc/DownloadView';
 
+.dyfi-tablist > section {
+  padding-top: 1em;
+}
+
 .dyfi-responses {
 
   .view-all {
