--- a/src/htdocs/modules/impact/_ShakeMapPage.scss
+++ b/src/htdocs/modules/impact/_ShakeMapPage.scss
@@ -18,8 +18,19 @@
   }
 }
 
-.stations > .accordion {
-  margin: 1em 0 0;
+.shakemap-tablist > section {
+  padding-top: 1em;
+}
+
+.shakemap-stations {
+
+  > .accordion {
+    margin: 1em 0 0;
+
+    &:first-child {
+      margin: 0;
+    }
+  }
 }
 
 
