--- a/src/htdocs/modules/base/_SummaryPage.scss
+++ b/src/htdocs/modules/base/_SummaryPage.scss
@@ -44,6 +44,12 @@
   }
 }
 
+a.view-all {
+  display: inline-block;
+  font-size: 13px;
+  margin: 1em 0 0 2px;
+}
+
 a.summary,
 a.summary:visited,
 a.summary:active,
