--- a/src/htdocs/modules/impact/_ShakeMapPage.scss
+++ b/src/htdocs/modules/impact/_ShakeMapPage.scss
@@ -41,6 +41,10 @@ dl.station-metadata > dd {
 }
 .station-channels {
   margin-top: 1em;
+
+  th {
+    min-width: 7em;
+  }
 }
 
 @media screen and (min-width:560px) {
