changed class names so that they dont overlap with shakemappage

--- a/src/htdocs/modules/summary/_ShakeMapStationLayer.scss
+++ b/src/htdocs/modules/summary/_ShakeMapStationLayer.scss
@@ -52,22 +52,22 @@ dl.station-metadata > dd {
   margin-left:7em;
 }
 
-.station-channels {
+.station-channels-map {
   margin-top:1em;
 }
-.station-channels-name,
-.station-channels-pga,
-.station-channels-pgv,
-.station-channels-psa03,
-.station-channels-psa10,
-.station-channels-psa30 {
+.station-channels-map-name,
+.station-channels-map-pga,
+.station-channels-map-pgv,
+.station-channels-map-psa03,
+.station-channels-map-psa10,
+.station-channels-map-psa30 {
   width:20%;
 }
-.station-channels-pga,
-.station-channels-pgv,
-.station-channels-psa03,
-.station-channels-psa10,
-.station-channels-psa30 {
+.station-channels-map-pga,
+.station-channels-map-pgv,
+.station-channels-map-psa03,
+.station-channels-map-psa10,
+.station-channels-map-psa30 {
   text-align:left;
 }
 
