--- a/src/htdocs/modules/summary/_SummaryPage.scss
+++ b/src/htdocs/modules/summary/_SummaryPage.scss
@@ -7,7 +7,7 @@
     background-size:32px 32px;
     background-repeat:no-repeat;
     background-position:center center;
-    background-image:url('../../../../images/star.png');
+    background-image:url('../../images/star.png');
 
     > img {
       position:relative;
