--- a/src/htdocs/css/_event-header.scss
+++ b/src/htdocs/css/_event-header.scss
@@ -20,6 +20,7 @@
       max-width:100px;
       overflow:hidden;
       text-overflow:ellipsis;
+      box-shadow: inset 0 0 1px rgba(0,0,0,0.5);
 
       &:first-child {
         margin-left:0;
