--- a/src/htdocs/css/_event-header.scss
+++ b/src/htdocs/css/_event-header.scss
@@ -17,7 +17,7 @@
       text-shadow: 1px 1px 0 rgba(255,255,255,0.3);
       width:23.5%;
       margin-left:2%;
-      max-width:100px;
+      max-width:103px;
       overflow:hidden;
       text-overflow:ellipsis;
       box-shadow: inset 0 0 1px rgba(0,0,0,0.5);
@@ -46,15 +46,16 @@
       padding:0;
       text-align:left;
       display:inline-block;
-      max-height:44px;
-      max-width:96px;
+      height:47px;
+      max-width:103px;
       border-bottom:1px solid #292772;
 
-      @media screen and (min-width:768px) {
-        max-height:44px;
-      }
+      // @media screen and (min-width:768px) {
+      //   max-height:44px;
+      // }
 
       img {
+        height: 47px;
         border-radius:3px;
         max-width:none;
       }
