Update OMB Number layout

--- a/src/htdocs/modules/impact/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/_DYFIFormPage.scss
@@ -96,12 +96,12 @@
 .omb-number {
   font-size:12px;
   position: absolute;
-  right: 1.5em;
-  top: 0.5em;
+  right: 16px;
+  top: 16px;
+  text-align: right;
 }
 
 .felt-header {
-  margin-top: 8px;
   padding-bottom: 0.5em;
   border-bottom: 1px solid #ddd;
 }
