--- a/src/htdocs/css/_responsiveTableScientific.scss
+++ b/src/htdocs/css/_responsiveTableScientific.scss
@@ -47,8 +47,8 @@
 
     > span {
       display:block;
-      padding:0; // override styles from dyfi responses
-      max-width:100%; // override styles from dyfi responses
+      padding:0; /* override styles from dyfi responses */
+      max-width:100%; /* override styles from dyfi responses */
     }
 
     > abbr {
