--- a/src/htdocs/modules/impact/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/_DYFIFormPage.scss
@@ -81,11 +81,11 @@
   }
 
   h4 {
-    //margin:0;
+    /*margin:0;*/
   }
   .subheader {
     font-size:12px;
-    //color: #777;
+    /*color: #777;*/
   }
 }
 
