--- a/src/htdocs/modules/summary/_InteractiveMap.scss
+++ b/src/htdocs/modules/summary/_InteractiveMap.scss
@@ -1,16 +1,18 @@
-@import '_DYFIUTMLayer';
-@import '_ShakeMapStationLayer';
-@import 'htdocs/css/_MouseOverLayer';
-@import 'htdocs/css/_MousePosition';
+@import '_DYFIUTMLayer.scss';
+@import '_ShakeMapStationLayer.scss';
+
+@import 'css/_MouseOverLayer.scss';
+@import 'css/_MousePosition.scss';
 
 .summary-interactive-map-wrapper {
-  // these rules are applied in JS see InteractiveMap
-  // position:fixed;
-  // top:0;
-  // right:0;
-  // bottom:0;
-  // left:0;
-
+  /*
+  these rules are applied in JS see InteractiveMap
+    position:fixed;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+  */
   margin:0;
   padding:8px;
   z-index:9999;
@@ -21,7 +23,7 @@
     display: block;
     margin: 0 auto;
     bottom:3.6em;
-    box-shadow:none; // removes inset box shadow
+    box-shadow:none; /* removes inset box shadow */
     box-shadow: 0 1px 5px rgba(0,0,0,0.65);
   }
 
@@ -37,8 +39,10 @@
   display:block;
   width:100%;
 
-  // This rule is applied in JS see InteractiveMap
-  // height:100%;
+  /*
+  This rule is applied in JS see InteractiveMap
+    height:100%;
+  */
 }
 
 .summary-map a img {
